@@ -1,3 +1,12 @@
+2010-08-27  Kent Tamura  <tkent@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        [DRT/Chromium] Fix inspector test failures
+        https://bugs.webkit.org/show_bug.cgi?id=44748
+
+        * DEPS: Update Chromium revision to 57605 to have a webkit_support change.
+
 2010-08-26  Dumitru Daniliuc  <dumi@chromium.org>
 
         Unreviewed, Chromium build fix.
