@@ -1,3 +1,15 @@
+2010-08-27  Kent Tamura  <tkent@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        [DRT/Chromium] Fix inspector test failures
+        https://bugs.webkit.org/show_bug.cgi?id=44748
+
+        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp:
+        (DRTDevToolsAgent::createClientMessageLoop):
+          Returns a valid WebKitClientMessageLoop instance
+        * DumpRenderTree/chromium/DRTDevToolsAgent.h:
+
 2010-08-26  Jon Honeycutt  <jhoneycutt@apple.com>
 
         Add Windows WebKit2 Tester to buildbot
