@@ -1,3 +1,13 @@
+2010-08-27  Kent Tamura  <tkent@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
+        [DRT/Chromium] Fix inspector test failures
+        https://bugs.webkit.org/show_bug.cgi?id=44748
+
+        * platform/chromium/drt_expectations.txt:
+         Update expectations for the DRT change.
+
 2010-08-27  Yuzo Fujishima  <yuzo@google.com>
 
         Unreviewed Chromium test expectation change.
